[tool.black]
line-length = 88
target_version = ['py38', 'py39', 'py310', "py311"]
exclude = '''
(
  /(
    | \.git
    | \.venv
    | \.mypy_cache
    | \.tox
  )/
)
'''

[tool.isort]
line_length = 88
profile = "black"


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"


[tool.poetry]
name = "openshift-cluster-management-python-client"
authors = ["Meni Yakove <myakove@gmail.com>", "Ruth Netser <rnetser@gmail.com>"]
description = "A python client for https://api.openshift.com/api/ APIs"
readme = "README.md"
version = "1.0.23"
license = "Apache-2.0"
homepage = "https://github.com/RedHatQE/openshift-cluster-management-python-client"
documentation = "https://github.com/RedHatQE/openshift-cluster-management-python-client/blob/main/README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
packages = [{include = "ocm_python_client"}]
keywords = ["Openshift", "OCM"]

[tool.poetry-dynamic-versioning.substitution]
files = ["VERSION"]

[tool.poetry.dependencies]
python = "^3.8"
urllib3 = "^1.25.3"
python-dateutil = "^2.8.2"

[tool.poetry.urls]
download = "https://pypi.org/project/openshift-cluster-management-python-client/"
"Bug Tracker" = "https://github.com/RedHatQE/openshift-cluster-management-python-client/issues"

[tool.poetry-dynamic-versioning]
enable = true
pattern = "((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

[tool.poetry.group.tests.dependencies]
pytest = "^7.4.0"
requests = "^2.31.0"

