[metadata]
name = openshift-cluster-management-python-client
version = 1.0.4
author = Ruth Netser
author_email = rnetser@redhat.com
description = A python client for https://api.openshift.com/api/ APIs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RedHatQE/openshift-cluster-management-python-client
download_url = https://github.com/RedHatQE/openshift-cluster-management-python-client/archive/refs/tags/v1.0.4.tar.gz

project_urls =
    Documentation = https://github.com/RedHatQE/openshift-cluster-management-python-client/tree/main/docs
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
